[package]
authors = ["Neko <neko@qwq.icu>"]
edition = "2021"
name    = "whatlang-node"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
whatlang = "0.16"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
